--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@ h1 {
   font-family: monospace;
   font-size: 6vh;
   background-color: cadetblue;
-  color: burlywood;
-  line-height: 6rem;
+  color:floralwhite;
+  line-height: 4.5rem;
+  text-align: center;
   /* padding: 2vh 0; */
 }
 .choice {
   height: 20vh;
   width: 20vh;
-  margin: 5vh 5vh;
+  margin: 4vh 5vh;
 }
 img {
   height: 20vh;
@@ -25,17 +26,15 @@ img {
   transition: all 0.15s;
 }
 img:hover{
-  /* opacity: 0.7; */
   cursor: pointer;
   box-shadow: 5px 5px 25px rgb(70, 94, 119);
-  /* border: black solid 10px; */
   border-radius: 50rem;
 }
 .choices {
   display: flex;
   justify-content: center;
   gap: 2rem;
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 .scoreBoard {
   display: flex;
@@ -52,17 +51,18 @@ img:hover{
 .mess {
   background-color: cadetblue;
   color: beige;
-  line-height: 15rem;
+  line-height: 10rem;
   display: inline;
   font-size: 2rem;
   padding: 1rem;
   border-radius: 1rem;
 }
 .reset{
-    background-color: cadetblue;
-    color: beige;
-    display: inline;
+    background-color:rgb(96, 147, 159);
+    color:rosybrown;
+    /* display: inline; */
     font-size: 2rem;
-    padding: 1rem;
+    padding: 0.5rem;
     border-radius: 1rem;
+    box-shadow: 5px 5px 25px rgb(89, 78, 88);
 }
